--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="./lasagna/lasagna.jpg" alt="Lasagna">
+    <img src="../recipes/lasagna.jpg" alt="Lasagna">
     <h4>Description</h4>
     <p>This classic lasagna recipe is made with an easy meat sauce as the base. 
     Layer the sauce with noodles and cheese, then bake until bubbly! 
