--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="./pizza/pizza.jpg" alt="Pizza">
+    <img src="../recipes/pizza.jpeg" alt="Pizza">
     <h4>Description</h4>
     <p>Be it any occasion, we all love to eat pizza at home. But, what goes behind making
         this delicious dish? Well, learn all about making a delicious pizza at home with
