UPDATE IMAGE LINK

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Burger</h1>
-    <img src="./burger/burger.jpg" alt="Burger">
+    <img src="../recipes/burger.jpeg" alt="Burger">
     <h4>Description</h4>
     <p>This Burger Recipe covers everything needed to make delightful veggie burgers
        from scratch, including how to prepare and pan fry delicious homemade 
